[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tqdm>=4.67.1",
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "opencv-python>=4.11.0.86",
    "matplotlib>=3.10.3",
    "grad-cam>=1.5.5",
]
